<resources>
    <string name="app_name">Install Lion-DPM</string>
    <string name="channalname_fail">Installed failed</string>
    <string name="tip_start_install">Start installing  %1$s</string>
    <string name="tip_failed_prase">Unable to parse</string>
    <string name="tip_failed_read">Reading apk failed</string>
    <string name="tip_failed_install">%1$s Installed failed</string>
    <string name="tip_success_install"> %1$s Installed succeed</string>
    <string name="tip_failed_install_witherror">%1$s Installed failed,The error has been copied to the clipboard\n%2$s</string>
    <string name="tip_success_uninstall">%1$s Uninstalled succeed</string>
    <string name="tip_failed_uninstall_witherror">%1$s Uninstalled failed,The error has been copied to the clipboard\n%2$s</string>
    <string name="title_dialog_install">Installation</string>
    <string name="title_dialog_uninstall">Uninstallation</string>
    <string name="message_size">Size：%1$s</string>
    <string name="message_name">Name: %1$s</string>
    <string name="message_packagename">Package Name: %1$s</string>
    <string name="message_version">Version: %1$s (%2$s)</string>
    <string name="message_version_existed">Existed: %1$s (%2$s)</string>
    <string name="message_irrevocableConfirm">This operation is irrevocable</string>
    <string name="checkbox_deactivate">Confirm Deactivate</string>
    <string name="checkbox_always_allow">Always Allow %1$s</string>
    <string name="checkbox_installsource_unkonwn">Unknown installation source</string>
    <string name="tip_start_activating">Trying to activate</string>
    <string name="tip_success_deactivate">Cancel succeed</string>
    <string name="tip_failed_deactivate">Unable to deactivate</string>
    <string name="title_is_deviceowner">Is the Device Owner currently</string>
    <string name="title_not_deviceowner">Not the Device Owner currently</string>
    <string name="summary_clicktocopycmd">\n%1$sn(Click to copy)</string>
    <string name="title_deactivate_deviceowner">Deactivate Device Owner</string>
    <string name="message_deactivate">\nThis operation is irrevocable\n\nMake sure you have unlocked unnecessary default apps\n</string>
    <string name="tip_ltsdk23">Only supports Android 6.0 and above devices</string>
    <string name="tip_exit">Press Back Again to Exit</string>
    <string name="installer_device">Device</string>
    <string name="launch_name">Run App</string>
    <string name="unknown">Unknown</string>
    <string name="title_systemSettings">System Settings</string>
    <string name="DISALLOW_INSTALL_APPS">Disallow install Apps</string>
    <string name="DISALLOW_UNINSTALL_APPS">Disallow uninstall Apps</string>
    <string name="DISALLOW_INSTALL_UNKNOWN_SOURCES">Disallow install unknown sources Apps</string>
    <string name="HideIcon">Hide icon</string>
    <string name="message_HideIcon">You can open the app settings in the following way\n\n1.Dialer *#*#297376#*#*\n2.System App Info-Manage space\n3.System App Info-Additional settings\n</string>
    <string name="ClearAllowedList">Clear allowed installation list</string>
    <string name="checkbox_ClearAllowedList">Confirm Clear</string>
    <string name="message_ClearAllowedList">\nClear the list of apps you don\'t need to confirm before installation\n</string>
    <string name="RebootDevice">Reboot device now</string>
    <string name="OtherSettings">Other settings</string>
    <string name="title_lockDefaultApp">Lock Default App</string>
    <string name="title_others">Others</string>
    <string name="title_display">Display</string>
    <string name="SetOrganizationName">Set organization name</string>
    <string name="title_SetOrganizationName">set the name of the organization under management</string>
    <string name="SetLockScreenInfo">Set lock screen info</string>
    <string name="title_SetLockScreenInfo">Set the device owner information to be shown on the lock screen.</string>
    <string name="LockDefaultLauncher">Lock default launcher</string>
    <string name="LockDefaultPackageInstaller">Lock default package installer</string>
    <string name="EnableBackupService">Enable system backup</string>
    <string name="SetUserRestrictions">Set user restrictions</string>
    <string name="hint_restrictionkey">Please input the key of the restriction</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="set">Set</string>
    <string name="clear_lock">Clear Lock</string>
    <string name="close">Close</string>
    <string name="tip_empty">The key Cannot be empty</string>
    <string name="title_lockdefault">Waring！</string>
    <string name="message_lockdefault">Locking the default app is permanent, even after deactivating the device owner.\nMake sure to cancel unnecessary locks before deactivating the device qwner\n\n(reminder: locks cannot be made on some custom rom)\n</string>
    <string name="checkbox_lockdefault">I am fully aware and at my own risk</string>


    <!--    <string name="ClearAllowedList">Clear allowed installation list</string>-->
    <!--    <string name="HideIcon">Hide Icon</string>-->
    <!--    <string name="checkbox_ClearAllowedList">Confirm Clear</string>-->
    <!--    <string name="message_ClearAllowedList">\nClear the list of apps you don\'t need to confirm before installation\n</string>-->
    <!--    <string name="message_HideIcon">You can open the app settings in the following way\n\nSystem App Info-Manage space\n2.1.Dialer *#*#297668#*#*\n3.System App Info-Additional settings\n</string>-->

    <!--    <string name="tip_exit">Press back again to exit</string>-->

    <string name="show_tip">Show notification after installation,You can run the app by clicking the notification</string>
    <string name="show_title">Show notification</string>
    <string name="summary_off_needconfirm">Never display a confirmation dialog  before installation</string>
    <string name="summary_on_needconfirm">User selects the application without confirmation before installation</string>
    <string name="confirm_title">Confirmation before installation</string>

    <string name="click_run">" %1$s, Click to run the app"</string>
</resources>
