<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.modosa.dpmapkinstaller.activity.SettingsActivity">
    <item
        android:id="@+id/HideIcon"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/HideIcon" />
    <item
        android:id="@+id/ClearAllowedList"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="@string/ClearAllowedList" />
    <item
        android:id="@+id/SetOrganizationName"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/SetOrganizationName"
        android:visible="false" />
    <item
        android:id="@+id/SetLockScreenInfo"
        android:orderInCategory="40"
        android:showAsAction="never"
        android:title="@string/SetLockScreenInfo"
        android:visible="false" />
    <item
        android:id="@+id/LockDefaultLauncher"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/LockDefaultLauncher" />
    <item
        android:id="@+id/LockDefaultPackageInstaller"
        android:orderInCategory="60"
        android:showAsAction="never"
        android:title="@string/LockDefaultPackageInstaller" />
    <item
        android:id="@+id/UserRestrictions"
        android:orderInCategory="70"
        android:showAsAction="never"
        android:title="@string/UserRestrictions" />
    <item
        android:id="@+id/RebootDevice"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/RebootDevice"
        android:visible="false" />

</menu>