<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.modosa.dpmapkinstaller.activity.SettingsActivitybak">
    <item
        android:id="@+id/HideIcon"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/HideIcon" />
    <item
        android:id="@+id/ClearAllowedList"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="@string/ClearAllowedList" />
    <item
        android:id="@+id/RebootDevice"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/RebootDevice"
        android:visible="false" />
    <item
        android:id="@+id/OtherSettings"
        android:orderInCategory="40"
        android:showAsAction="never"
        android:title="@string/OtherSettings" />


</menu>